--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -187,14 +187,6 @@ h3 {
   font-size: 1em;
 }
 
-html.page-fixed {
-  overflow: hidden;
-}
-
-body.page-fixed {
-  overflow-y: scroll;
-}
-
 .responsive-image img,
 .responsive-image svg {
   display: block;
@@ -210,7 +202,6 @@ body.page-fixed {
 .page__ellipse {
   position: absolute;
   z-index: -1;
-  display: none;
 }
 
 .page .d-480-inline-block {
@@ -266,7 +257,6 @@ footer {
   background-color: rgba(255, 255, 255, 0.65);
   font-size: 16px;
   z-index: 99;
-  display: none;
 }
 
 .popup__content {
@@ -813,7 +803,7 @@ footer {
   -ms-flex-pack: center;
   justify-content: center;
   background: #17A5F4;
-  z-index: 9999;
+  visibility: visible;
 }
 
 .preloader_hide {
@@ -825,6 +815,7 @@ footer {
   -o-transition: .6s all ease 1s;
   transition: .6s all ease 1s;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .preloader__wrap-logo {
@@ -946,6 +937,7 @@ textarea:required:invalid {
   width: 100%;
   color: #000;
   font-family: "Montserrat-Medium";
+  min-height: 1.66em;
 }
 
 .form__field_area {
@@ -1018,10 +1010,6 @@ textarea:required:invalid {
 
 .our-plus__title > span:first-child {
   padding-right: 26px;
-}
-
-.our-plus__wrap-love {
-  display: none;
 }
 
 .our-plus__love {
