--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -982,10 +982,9 @@ textarea:required:invalid {
 }
 
 .form__field.active ~ .form__placeholder {
-  font-size: 18px;
-  -webkit-transform: translate(0, -80%);
-  -ms-transform: translate(0, -80%);
-  transform: translate(0, -80%);
+  -webkit-transform: translate(0, -80%) scale(0.8);
+  -ms-transform: translate(0, -80%) scale(0.8);
+  transform: translate(0, -80%) scale(0.8);
 }
 
 .form__field.error {
@@ -1373,10 +1372,6 @@ textarea:required:invalid {
     height: 25px;
   }
 
-  .form__field.active ~ .form__placeholder {
-    font-size: 16px;
-  }
-
   .our-plus__list {
     display: block;
   }
@@ -1500,10 +1495,6 @@ textarea:required:invalid {
 
   .form__item_50 {
     max-width: none;
-  }
-
-  .form__field.active ~ .form__placeholder {
-    font-size: 14px;
   }
 
   .our-plus__title br {
