--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -882,7 +882,7 @@ footer {
   transition: fill-opacity .5s ease;
 }
 
-.preloader__logo-img.fill-show {
+.preloader__logo-img.svg-hide {
   -webkit-transition: .8s opacity ease 1.4s, .8s filter ease .2s;
   -o-transition: .8s opacity ease 1.4s, .8s filter ease .2s;
   transition: .8s opacity ease 1.4s, .8s filter ease .2s;
@@ -891,7 +891,7 @@ footer {
   filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
 }
 
-.preloader__logo-img.fill-show path {
+.preloader__logo-img.svg-hide path {
   fill-opacity: 1;
 }
 
