--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -1260,10 +1260,10 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  -webkit-transition: .8s all ease;
-  -o-transition: .8s all ease;
-  transition: .8s all ease;
+  background-color: rgba(0, 0, 0, 0.8);
+  -webkit-transition: .4s all ease;
+  -o-transition: .4s all ease;
+  transition: .4s all ease;
   opacity: 0;
   visibility: hidden;
 }
@@ -1278,28 +1278,8 @@ footer {
   visibility: hidden;
 }
 
-.portfolio__item:hover .portfolio__video {
+.portfolio__item:hover .portfolio__gif {
   opacity: 1;
-}
-
-.portfolio__video {
-  position: absolute;
-  top: -webkit-calc(50% + 3px);
-  top: calc(50% + 3px);
-  left: -webkit-calc(50% + 4px);
-  left: calc(50% + 4px);
-  width: -webkit-calc(100% + 25px);
-  width: calc(100% + 25px);
-  height: -webkit-calc(100% + 25px);
-  height: calc(100% + 25px);
-  -webkit-transition: .4s all ease;
-  -o-transition: .4s all ease;
-  transition: .4s all ease;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 2;
 }
 
 .portfolio__img {
@@ -1308,12 +1288,12 @@ footer {
   height: auto;
 }
 
-.portfolio__img_gif {
+.portfolio__gif {
   position: absolute;
   top: 50%;
   left: 0;
-  width: -webkit-calc(100% + 0px);
-  width: calc(100% + 0px);
+  width: -webkit-calc(100% + 7px);
+  width: calc(100% + 7px);
   height: 100%;
   -webkit-transition: .4s all ease;
   -o-transition: .4s all ease;
@@ -1322,7 +1302,6 @@ footer {
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
-  display: none;
 }
 
 .portfolio__wrap-btn {
